--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<link rel="shortcut icon" type="image/x-icon" href="icon/tabs.png" media="screen" />
+	
+	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="bookmark"href="favicon.ico" />
 	<title>My Webpage!</title>
 	<meta charset="utf-8">
 	<meta name="keywords" content="key,关键字1,关键字2">
