--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<center><font size="20dp" color=#1178DC>我的网页</font></center>
 		<hr size=16 color=#gacbde align=center>
 		<br>
-		<center><font size="20dp" color=#ffad32>刚接触网页开发不久，还没什么实质性创作。</font></center>
+		<center><font size="20dp" color=#ffad32>刚接触网页开发不久，先写个静态网页练练手。</font></center>
 		<br>
 		<div style="float:right; text-align:right">
 			<font color="#f13f84" size="5dp">先写个小网页当主页--author：贡志鹏</font>
