--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<center><font size="20dp" color=#1178DC>我的网页</font></center>
 		<hr size=16 color=#gacbde align=center>
 		<br>
-		<center><font size="20dp" color=#ffad32>刚接触网页开发不久，先写个静态网页练练手。</font></center>
+		<center><font size="20dp" color=#ffad32>刚接触网页，先写个静态网页。</font></center>
 		<br>
 		<div style="float:right; text-align:right">
 			<font color="#f13f84" size="5dp">先写个小网页当主页--author：贡志鹏</font>
@@ -36,7 +36,7 @@
 		<script src="js/number.js"></script>
 		<script src="js/countdown.js"></script>
 		<div class="boxin">
-			<input type=button value="Open Window" onclick="open_win()" />
+			<input type=button value="Open new page." onclick="open_win()" />
 		</div>
 	</div>
 	<div>
