add github websit
add github websit

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 		<center><font size="20dp" color=#1178DC>我的网页</font></center>
 		<hr size=16 color=#gacbde align=center>
 		<br>
-		<center><font size="20dp" color=#ffad32>刚接触网页，先写个静态网页。</font></center>
+		<center><font size="20dp" color=#ffad32>先写个脑残的静态网页。</font></center>
 		<br>
 		<div style="float:right; text-align:right">
-			<font color="#f13f84" size="5dp">先写个小网页当主页--author：贡志鹏</font>
+			<font color="#f13f84" size="5dp">github:<a href="https://github.com/ksiic" target="black">https://github.com/ksiic</a></font>
+			<font color="#f13f84" size="5dp">个人小主页--author：贡志鹏</font>
 		</div>
 		<br><br><br>
 		<hr size=6 color=#1acbde align=center>
