--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<br>
 		<div style="float:right; text-align:right">
 			<font color="#f13f84" size="5dp">github:<a href="https://github.com/ksiic" target="black">https://github.com/ksiic</a></font>
-			<font color="#f13f84" size="5dp">个人小主页--author：贡志鹏</font>
+			<br><font color="#f13f84" size="5dp">个人小主页--author：贡志鹏</font>
 		</div>
 		<br><br><br>
 		<hr size=6 color=#1acbde align=center>
