--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="bookmark"href="favicon.ico" />
+	<link rel="shortcut icon" href="Icon/icon_ksiic_64.ico" />
+	<link rel="bookmark"href="Icon/icon_ksiic_64.ico" />
 	<title>My Webpage!</title>
 	<meta charset="utf-8">
 	<meta name="keywords" content="key,关键字1,关键字2">
